--- a/0.html
+++ b/0.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>곤듀♥완댜 라브스토리</title>
   <meta charset="utf-8">
 </head>
 <body>
