--- a/1.html
+++ b/1.html
@@ -6,12 +6,10 @@
 <li>HTML<br></li>
 <li>JavaScript<br></li>
 </ol>
-<h1>hello web</h1>
+<h1>hello 김곤듀</h1>
 <h2>Hypertext Mrakup language (html) is the standard markup language for creating web pages and web applications.</h6>
-<p><p style="margin-top:45px;"><strong><u>안녕하세요</u></strong> <strong>여러분</strong> 반갑습니다 이번시간에는 유기농에 대해 배워볼게요<br>유기농이란
-  놀라운 유기물체로 비료와 농약을 사용하지 않은 농축산물을 뜻합니다</p>
+<p><p style="margin-top:45px;"><strong><u>반가워</u></strong> <strong>김곤듀</strong> 내가 웹페이지 만들어봤어<br>재미있지?</p>
   <h1>HTML</h1>
   <P><a href="https://www.w3.org/TR/html5/"target="_blank" title="html5specification"
   <p>Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
   <br><img src="고양이.jpg" width="10%">
-  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. </p>
